2007-07-10  Tom Tromey  <tromey@redhat.com>

	Adjust idutils.el comments to work with package.el.
	* lisp/idutils.el: Fix comments.
	(gid): Add autoload comment.

2007-06-26  Tom Tromey  <tromey@redhat.com>

	Don't treat the last line in the gid buffer as a match.
	* lisp/idutils.el (gid-mode-font-lock-keywords): Also match "finished".

2007-06-19  Tom Tromey  <tromey@redhat.com>

	* lisp/idutils.el: Require thingatpt.
	(gid-mode-font-lock-keywords): New variable.
	(gid-use-search-in-buffer-name): New variable.
	(gid-mode): New mode.
	(gid): Use compilation-start, thing-at-point.
	(word-around-point): Removed.
	Details in <http://thread.gmane.org/gmane.comp.gnu.idutils.bugs/70>.

2007-02-19  Pedro J. Ruiz Lopez  <holzplatten@es.gnu.org>

	* Upgraded gnulib.
	* Upgraded gettext.

	* lib/regex_internal.h: fix warnings about redefined cpp macros.

2007-01-19  Jim Meyering  <jim@meyering.net>

	temporary fix simply to avoid the infloop.
	* libidu/scanners.c (get_token_lisp): Disable the code that
	treats '[]' as part of a kawa identifier.  It could call ungetc
	two or three times in a row.  One is the maximum.
	* testsuite/infloop-kawa-el: New file.  Test for the above.
	* testsuite/Makefile.am (TESTS): Add infloop-kawa-el.
	(TESTS_ENVIRONMENT): Prepend build directory to PATH so that
	invoking e.g., "mkid" runs the just-built version of the tool.

2006-11-25  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c (get_token_lisp): provide rough support for
	  character constants.

2006-10-19  Claudio Fontana  <claudio@gnu.org>

	* libidu/scanners.c (get_token_lisp): (tiny) fix bug in double
	  quoted string parsing (fix provided by Walter Sosa).

2006-08-22  Claudio Fontana  <claudio@gnu.org>

	* doc/idutils.texi: fix wrong example .emacs entry, where
	  a non existant 'gid' lisp is loaded instead of 'idutils'.

2006-08-05  Claudio Fontana  <claudio@gnu.org>

	version 4.2 released.

2006-07-22  Claudio Fontana  <claudio@gnu.org>
